@@ -158,6 +158,8 @@ README.md as main page.
 	
 	  -h HAIRPINSIZE        [3]  Minimum hairpin size, 0 or larger, default 3
 	  -x SEGMENTS_XML_FILE       Use custom  "segments.xml"-syntaxed file
+	  
+	  -t NUM_THREADS      [0,N}  Run with N threads (0 = maximal available)
 	
 	  -V                         Shows the version and license
 	
